--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -7,25 +7,22 @@
 <body>
 
 	<div th:fragment="navBar">
-		
-		<div sec:authorize="!isAuthenticated()">
-			<p>Utilisateur anonyme (non connecté)</p>
-			<a href="/encheres">Enchères</a> <br>
-			<a href="/login">S'inscrire - se connecter</a> <br>
-		</div>
-		
-		<div sec:authorize="isAuthenticated()">
-			<p>Utilisateur connecté <label th:text="${#authentication.getPrincipal().getUsername()}"></label></p>
-			<a href="/encheres">Enchères</a> <br>
-			<a href="/article/redirectToCreate">Vendre un article</a> <br>
-			<a href="/register">Mon Profil</a> <br>
-			<form th:action="@{/logout}" method="post" class="text-center mt-6">
-				<button type="submit">Déconnexion</button>
-			</form>
-		</div>
-		
-		
+	<div sec:authorize="!isAuthenticated()" class="flex items-center space-x-4">
+		<a href="/login">S'inscrire - se connecter</a>
 	</div>
+
+	<div sec:authorize="isAuthenticated()" class="flex items-center space-x-4">
+		<p>
+			Utilisateur connecté : <label th:text="${#authentication.getPrincipal().getUsername()}"></label>
+		</p>
+		<a href="/encheres">Enchères</a>
+		<a href="/article/redirectToCreate">Vendre un article</a>
+		<a href="/register">Mon Profil</a>
+		<form th:action="@{/logout}" method="post" class="flex items-center">
+			<button type="submit" class="ml-4">Déconnexion</button>
+		</form>
+	</div>
+
 
 </body>
 </html>
