--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -107,7 +107,7 @@
 
             <!-- Bouton d'inscription ou modification -->
             <div class="flex justify-center space-x-4 mt-6">
-                <button sec:authorize="!isAuthenticated()" type="submit" class="w-full py-3 bg-blue-500 text-white font-semibold rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500">S'inscrire</button>
+                <button sec:authorize="!isAuthenticated()" type="submit" class="w-full py-3 bg-violet-500 text-white font-semibold rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500">S'inscrire</button>
                 <button sec:authorize="isAuthenticated()" type="submit" class="w-full py-3 bg-violet-500 text-white font-semibold rounded-md hover:bg-yellow-600 focus:outline-none focus:ring-2 focus:ring-yellow-500">Modifier</button>
             </div>
         </form>
