fix(vue) : filters corretly configured

--- a/src/main/resources/templates/encheres.html
+++ b/src/main/resources/templates/encheres.html
@@ -82,13 +82,13 @@
 							</div>
 							<div class="mt-2">
 								<input type="radio" name="equals_-_status"
-								th:value="'AuctionEnded_----_equals_-_idBuyer_-_'+${idMember}" id="won-not-collected" /> <label
-									for="won-not-collected" class="ml-2">Enchères
+								th:value="'AuctionEnded_----_equals_-_idBuyer_-_'+${idMember}" id="bid-won-not-collected" /> <label
+									for="bid-won-not-collected" class="ml-2">Enchères
 									remportées non retirées</label>
 							</div>
 							<div class="mt-2">
 								<input type="radio" name="equals_-_status" th:value="'Removed_----_equals_-_idBuyer_-_'+${idMember}" 
-									id="won-collected" /> <label for="won-collected" class="ml-2">Enchères
+									id="bid-won-collected" /> <label for="bid-won-collected" class="ml-2">Enchères
 									remportées retirées</label>
 							</div>
 						</div>
