--- a/src/main/resources/templates/encheres.html
+++ b/src/main/resources/templates/encheres.html
@@ -151,8 +151,8 @@
 			<div class="card bg-gray-800 p-6 rounded-lg shadow-md"
 				th:each="art : ${articles}">
 				
-				<h3 class="text-xl font-semibold mb-2" th:text="${art.name}">Nom
-					de l'article</h3>
+				<a th:href="@{/article/{id}(id=${art.idArticle})}"><h3 class="text-xl font-semibold mb-2" th:text="${art.name}">
+					Nom de l'article</h3></a>
 				<p>
 					<strong>Id Enchère:</strong> <span th:text="${art.idArticle}"></span>
 				</p>
