--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Inscription</title>
-    <!-- Inclusion de TailwindCSS depuis le CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
+<title>Inscription</title>
+<!-- Inclusion de TailwindCSS depuis le CDN -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<style>
         /* Flashy Animated Background */
         body {
 
@@ -21,10 +22,23 @@
 
     </style>
 </head>
+
 <body class="font-sans text-gray-100">
+<script>
+	function validatePasswords() {
+		const password = document.getElementById('password').value;
+		const confirmPassword = document.getElementById('confirmPassword').value;
+		const errorDiv = document.getElementById('passwordError');
 
-<body class="bg-gray-900 font-sans text-gray-100">
+		if (password !== confirmPassword) {
+			errorDiv.classList.remove('hidden');
+			return false; // Empêche l'envoi du formulaire
+		}
 
+		errorDiv.classList.add('hidden');
+		return true; // Continue l'envoi du formulaire
+	}
+</script>
 	<!-- Navigation -->
 	<nav class="bg-gray-800 shadow-md">
 		<div class="max-w-7xl mx-auto px-4 py-4">
@@ -36,90 +50,143 @@
 			</div>
 		</div>
 	</nav>
-    <div class="max-w-3xl mx-auto px-6 py-8 bg-gray-800 rounded-lg shadow-md mt-8">
-        <h2 class="text-3xl font-bold text-center text-gray-100 mb-8" sec:authorize="!isAuthenticated()">Formulaire d'inscription</h2>
+	<div
+		class="max-w-3xl mx-auto px-6 py-8 bg-gray-800 rounded-lg shadow-md mt-8">
+		<h2 class="text-3xl font-bold text-center text-gray-100 mb-8"
+			sec:authorize="!isAuthenticated()">Formulaire d'inscription</h2>
 
-        <!-- Formulaire d'inscription -->
-        <form th:action="@{/register}" th:object="${member}" method="post" name="registerForm" class="space-y-6">
-            
-            <div>
-                <label for="userName" class="block text-lg font-medium text-gray-100">Pseudo</label>
-                <input type="text" id="userName" th:field="*{userName}" class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-                <div th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}" class="text-red-500 text-sm"></div>
-                <div th:if="${UserNameAlreadyExistsException}" class="text-red-500 text-sm">
-                    <p th:text="${ExceptionMessage}"></p>
-                </div>
-            </div>
+		<!-- Formulaire d'inscription -->
+		<form th:action="@{/register}" th:object="${member}" method="post"
+			name="registerForm" class="space-y-6">
 
-            <div>
-                <label for="password" class="block text-lg font-medium text-gray-100">Mot de passe</label>
-                <input type="password" id="password" th:field="*{password}" class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-                <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-red-500 text-sm"></div>
-            </div>
+			<div>
+				<label for="userName"
+					class="block text-lg font-medium text-gray-100">Pseudo</label> <input
+					type="text" id="userName" th:field="*{userName}"
+					class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+				<div th:if="${#fields.hasErrors('userName')}"
+					th:errors="*{userName}" class="text-red-500 text-sm"></div>
+				<div th:if="${UserNameAlreadyExistsException}"
+					class="text-red-500 text-sm">
+					<p th:text="${ExceptionMessage}"></p>
+				</div>
+			</div>
+			<div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+				<div class="space-y-6">
+					<div>
+						<label for="password"
+							class="block text-lg font-medium text-gray-100">Mot de
+							passe</label> <input type="password" id="password" th:field="*{password}"
+							class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+						<div th:if="${#fields.hasErrors('password')}"
+							th:errors="*{password}" class="text-red-500 text-sm"></div>
+					</div>
+		
+					<div>
+						<label for="name" class="block text-lg font-medium text-gray-100">Nom</label>
+						<input type="text" id="name" th:field="*{name}"
+							class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+						<div th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+							class="text-red-500 text-sm"></div>
+					</div>
+		
+					<div>
+						<label for="firstName"
+							class="block text-lg font-medium text-gray-100">Prénom</label> <input
+							type="text" id="firstName" th:field="*{firstName}"
+							class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+						<div th:if="${#fields.hasErrors('firstName')}"
+							th:errors="*{firstName}" class="text-red-500 text-sm"></div>
+					</div>
+		
+					<div>
+						<label for="email" class="block text-lg font-medium text-gray-100">Email</label>
+						<input type="email" id="email" th:field="*{email}"
+							class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+						<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+							class="text-red-500 text-sm"></div>
+					</div>
+		
+					<div>
+						<label for="phoneNumber"
+							class="block text-lg font-medium text-gray-100">Téléphone</label> <input
+							type="text" id="phoneNumber" th:field="*{phoneNumber}"
+							class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+						<div th:if="${#fields.hasErrors('phoneNumber')}"
+							th:errors="*{phoneNumber}" class="text-red-500 text-sm"></div>
+					</div>
+		
+				</div>
+				<div class="space-y-6">
+					<div>
+						<label for="confirmPassword"
+							class="block text-lg font-medium text-gray-100">Confirmer
+							le mot de passe</label> <input type="password" id="confirmPassword"
+							name="confirmPassword"
+							class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+						<div id="passwordError" class="text-red-500 text-sm hidden">Les
+							mots de passe ne correspondent pas.</div>
+					</div>
+		
+					<div>
+						<label for="roadNumber"
+							class="block text-lg font-medium text-gray-100">Numéro de
+							rue</label> <input type="text" id="roadNumber" th:field="*{roadNumber}"
+							class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+						<div th:if="${#fields.hasErrors('roadNumber')}"
+							th:errors="*{roadNumber}" class="text-red-500 text-sm"></div>
+					</div>
+		
+					<div>
+						<label for="roadName"
+							class="block text-lg font-medium text-gray-100">Rue</label> <input
+							type="text" id="roadName" th:field="*{roadName}"
+							class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+						<div th:if="${#fields.hasErrors('roadName')}"
+							th:errors="*{roadName}" class="text-red-500 text-sm"></div>
+					</div>
+		
+					<div>
+						<label for="zipCode" class="block text-lg font-medium text-gray-100">Code
+							postal</label> <input type="text" id="zipCode" th:field="*{zipCode}"
+							class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+						<div th:if="${#fields.hasErrors('zipCode')}" th:errors="*{zipCode}"
+							class="text-red-500 text-sm"></div>
+					</div>
+		
+					<div>
+						<label for="townName"
+							class="block text-lg font-medium text-gray-100">Ville</label> <input
+							type="text" id="townName" th:field="*{townName}"
+							class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+						<div th:if="${#fields.hasErrors('townName')}"
+							th:errors="*{townName}" class="text-red-500 text-sm"></div>
+					</div>
+				</div>
+			</div>
+			<!-- Bouton d'inscription ou modification -->
+			<div class="flex justify-center space-x-4 mt-6">
+				<button sec:authorize="!isAuthenticated()" type="submit"
+					class="py-2 px-5  bg-violet-500 text-white font-semibold rounded-md hover:bg-violet-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
+					onclick="return validatePasswords()">S'inscrire</button>
+				<button sec:authorize="isAuthenticated()" type="submit"
+					class="py-2 px-5 bg-violet-500 text-white font-semibold rounded-md hover:bg-violet-600 focus:outline-none focus:ring-2 focus:ring-yellow-500"
+					onclick="return validatePasswords()">Modifier</button>
+			</div>
+		</form>
 
-            <div>
-                <label for="name" class="block text-lg font-medium text-gray-100">Nom</label>
-                <input type="text" id="name" th:field="*{name}" class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-                <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-red-500 text-sm"></div>
-            </div>
+		<!-- Formulaire de suppression de compte (visible uniquement si connecté) -->
+		<div sec:authorize="isAuthenticated()">
+			<form th:action="@{/deleteMember}" method="post"
+				class="mt-8 text-center">
+				<button type="submit"
+					class="py-2 px-4 bg-red-500 text-white rounded-md hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-500">Supprimer
+					mon compte</button>
+			</form>
+		</div>
 
-            <div>
-                <label for="firstName" class="block text-lg font-medium text-gray-100">Prénom</label>
-                <input type="text" id="firstName" th:field="*{firstName}" class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-                <div th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}" class="text-red-500 text-sm"></div>
-            </div>
-
-            <div>
-                <label for="email" class="block text-lg font-medium text-gray-100">Email</label>
-                <input type="email" id="email" th:field="*{email}" class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-                <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-red-500 text-sm"></div>
-            </div>
-
-            <div>
-                <label for="phoneNumber" class="block text-lg font-medium text-gray-100">Téléphone</label>
-                <input type="text" id="phoneNumber" th:field="*{phoneNumber}" class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-                <div th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}" class="text-red-500 text-sm"></div>
-            </div>
-
-            <div>
-                <label for="roadNumber" class="block text-lg font-medium text-gray-100">Numéro de rue</label>
-                <input type="text" id="roadNumber" th:field="*{roadNumber}" class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-                <div th:if="${#fields.hasErrors('roadNumber')}" th:errors="*{roadNumber}" class="text-red-500 text-sm"></div>
-            </div>
-
-            <div>
-                <label for="roadName" class="block text-lg font-medium text-gray-100">Rue</label>
-                <input type="text" id="roadName" th:field="*{roadName}" class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-                <div th:if="${#fields.hasErrors('roadName')}" th:errors="*{roadName}" class="text-red-500 text-sm"></div>
-            </div>
-
-            <div>
-                <label for="zipCode" class="block text-lg font-medium text-gray-100">Code postal</label>
-                <input type="text" id="zipCode" th:field="*{zipCode}" class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-                <div th:if="${#fields.hasErrors('zipCode')}" th:errors="*{zipCode}" class="text-red-500 text-sm"></div>
-            </div>
-
-            <div>
-                <label for="townName" class="block text-lg font-medium text-gray-100">Ville</label>
-                <input type="text" id="townName" th:field="*{townName}" class="w-full p-3 border border-gray-600 rounded-md bg-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-                <div th:if="${#fields.hasErrors('townName')}" th:errors="*{townName}" class="text-red-500 text-sm"></div>
-            </div>
-
-            <!-- Bouton d'inscription ou modification -->
-            <div class="flex justify-center space-x-4 mt-6">
-                <button sec:authorize="!isAuthenticated()" type="submit" class="w-full py-3 bg-violet-500 text-white font-semibold rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500">S'inscrire</button>
-                <button sec:authorize="isAuthenticated()" type="submit" class="w-full py-3 bg-violet-500 text-white font-semibold rounded-md hover:bg-yellow-600 focus:outline-none focus:ring-2 focus:ring-yellow-500">Modifier</button>
-            </div>
-        </form>
-
-        <!-- Formulaire de suppression de compte (visible uniquement si connecté) -->
-        <div sec:authorize="isAuthenticated()">
-            <form th:action="@{/deleteMember}" method="post" class="mt-8 text-center">
-                <button type="submit" class="py-2 px-4 bg-red-500 text-white rounded-md hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-500">Supprimer mon compte</button>
-            </form>
-        </div>
-
-    </div>
+	</div>
 
 </body>
+
 </html>
