feat (Article): can bid on article, redirects to the page

--- a/src/main/resources/templates/encheres.html
+++ b/src/main/resources/templates/encheres.html
@@ -70,7 +70,7 @@
 						<div>
 							<input type="radio" name="equals_-_status" value="IGNORE"
 								checked="checked" id="all-auctions" /> <label
-								for="all-auctions" class="ml-2">Toutes enchères en cours</label>
+								for="all-auctions" class="ml-2">Toutes enchères</label>
 						</div>
 
 						<div class="mt-4">
