--- a/src/main/resources/templates/article/articleDetails.html
+++ b/src/main/resources/templates/article/articleDetails.html
@@ -43,9 +43,12 @@
 		<p th:if="${article.status.name=='AuctionEnded' || article.status.name=='AuctionRemoved'}"> <strong>Gagnant</strong> 
 			<span th:text="${article.buyer.userName}"></span> </p>
 		
-		<div th:if="${article.status.name=='AuctionStarted'}"><form action="/article/bid">
+		<div th:if="${article.status.name=='AuctionStarted'}"><form action="/article/bid" method="post">
+		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+		<input type="hidden" name="articleId" th:value="${article.idArticle}">
 		<p> <strong>Renchérir</strong> 
-			<input type="number" th:name="newPrice" th:min="${article.salePrice}" placeholder="${article.salePrice}"> </p>
+			<input type="number" name="newPrice" th:min="${article.salePrice+1}" th:placeholder="${article.salePrice+1}"> </p>
+		<button type="submit">Rencherir</button>
 		</form></div>
 		
 	</div>
