feat (Users): session expires in 5 mins

--- a/src/main/resources/templates/encheres.html
+++ b/src/main/resources/templates/encheres.html
@@ -6,6 +6,7 @@
 <title>ENI-Encheres YV</title>
 <!-- Inclusion de TailwindCSS depuis le CDN -->
 <script src="https://cdn.tailwindcss.com"></script>
+<link th:href="@{/css/style.css}" rel="stylesheet">
 <style>
         /* Flashy Animated Background */
         body {
