--- a/src/main/resources/templates/fragments/logo.html
+++ b/src/main/resources/templates/fragments/logo.html
@@ -6,9 +6,16 @@
 </head>
 <body>
 
-	<div th:fragment="logo">
-		<a href = "/"> <h1>ENI-Enchères</h1> </a>
-	</div>
+
+
+<body>
+
+	 <div th:fragment="logo" class="flex items-center justify-center space-x-4">
+        <a href="/" class="flex items-center space-x-4">
+            <img class="w-16 h-auto " src="/images/logoEni.png" alt="logo ENI">
+            <h1 class="text-2xl">ENI-Enchères</h1>
+        </a>
+    </div>
 
 </body>
 </html>
