--- a/src/main/resources/templates/encheres.html
+++ b/src/main/resources/templates/encheres.html
@@ -68,9 +68,9 @@
 					<div class="lg:col-span-2">
 						<h3 class="text-xl font-semibold mb-2">Statut des enchères</h3>
 						<div>
-							<input type="radio" name="equals_-_status" value="IGNORE"
+							<input type="radio" name="equals_-_status" value="AuctionStarted"
 								checked="checked" id="all-auctions" /> <label
-								for="all-auctions" class="ml-2">Toutes enchères</label>
+								for="all-auctions" class="ml-2">Toutes enchères en cours</label>
 						</div>
 
 						<div class="mt-4">
