fix(login) : changed way of connexion

--- a/src/main/resources/templates/fragments/logo.html
+++ b/src/main/resources/templates/fragments/logo.html
@@ -12,7 +12,7 @@
 
 	 <div th:fragment="logo" class="flex items-center justify-center space-x-4">
         <a href="/" class="flex items-center space-x-4">
-            <img class="w-16 h-auto " src="/images/logoEni.png" alt="logo ENI">
+            <img class="w-16 h-auto " th:src="@{/images/logoEni.png}" alt="logo ENI">
             <h1 class="text-2xl">ENI-Enchères</h1>
         </a>
     </div>
