--- a/src/main/resources/templates/encheres.html
+++ b/src/main/resources/templates/encheres.html
@@ -73,8 +73,8 @@
 								for="all-auctions" class="ml-2">Toutes enchères(DEBUG?)</label>
 						</div>
 						<div>
-							<input type="radio" name="equals_-_status" value="AuctionStarted"
-								checked="checked" id="all-auctions" /> <label
+							<input type="radio" name="equals_-_status" value="AuctionStarted" 
+							id="all-auctions-in-progress" /> <label
 								for="all-auctions" class="ml-2">Toutes enchères en cours</label>
 						</div>
 
