--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -166,10 +166,10 @@
 			</div>
 			<!-- Bouton d'inscription ou modification -->
 			<div class="flex justify-center space-x-4 mt-6">
-				<button sec:authorize="isAuthenticated()" type="submit"
+				<button sec:authorize="isAuthenticated()" type="submit" value="Submit"
 					class="py-2 px-5  bg-violet-500 text-white font-semibold rounded-md hover:bg-violet-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
 					onclick="return validatePasswords()">Modifier</button>
-				<button sec:authorize="!isAuthenticated()" type="submit"
+				<button sec:authorize="!isAuthenticated()" type="submit" value="Submit"
 					class="py-2 px-5  bg-violet-500 text-white font-semibold rounded-md hover:bg-violet-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
 					onclick="return validatePasswords()">S'inscrire</button>
 				
