feat (Article Image): auto run folder setup, load images into article details
java script that autoruns at spring startup, creates a new folder structure just outside of the project, takes the test images in static and puts them in the right place, then serves the images from the external folder to the HTML view

--- a/src/main/resources/templates/article/articleDetails.html
+++ b/src/main/resources/templates/article/articleDetails.html
@@ -27,6 +27,9 @@
 	<div>
 		<p> <strong>Article n°</strong> <span th:text="${article.idArticle}"></span> </p>
 		
+		<img th:if="${article.imgFileName != null}" alt="article image" 
+		th:src="@{/images/{auctionId}/images/{imgName}(auctionId=${article.idArticle}, imgName=${article.imgFileName})}">
+		
 		<p> <strong>Catégorie</strong> <span th:text="${article.category.name}"></span> </p>
 		
 		<p> <span th:text="${article.description}"></span> </p>
