--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -56,7 +56,7 @@
 			sec:authorize="!isAuthenticated()">Formulaire d'inscription</h2>
 
 		<!-- Formulaire d'inscription -->
-		<form action="/register" th:object="${member}" method="post"
+		<form th:action="@{/register}" th:object="${member}" method="post"
 			name="registerForm" class="space-y-6">
 
 			<div>
