--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -25,6 +25,7 @@
 				un article</a> <a th:href="@{/register}">Mon Profil</a>
 			<form th:action="@{/logout}" method="post" class="flex items-center">
 				<button type="submit" class="ml-4">Déconnexion</button>
+				</form>
 		</div>
 </body>
 </html>
